@@ -464,6 +464,9 @@ Release 2.4.0 - UNRELEASED
 
     HDFS-5953. TestBlockReaderFactory fails in trunk. (Akira Ajisaka via wang)
 
+    HDFS-5759. Web UI does not show up during the period of loading FSImage.
+    (Haohui Mai via Arpit Agarwal)
+
 Release 2.3.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
